# clashai-environments

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  SECURITY.md  TRADEMARKS.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/connect-four-protocol/: Cargo.toml
crates/connect-four-protocol/resources/: connect_four_rules.md
crates/connect-four-protocol/src/: engine.rs  lib.rs
crates/connect-four-protocol/tests/: engine_tests.rs
crates/coup-engine/: Cargo.toml
crates/coup-engine/src/: lib.rs
crates/coup-engine/tests/: rules.rs
crates/coup-protocol/: Cargo.toml
crates/coup-protocol/resources/: coup_rules.md
crates/coup-protocol/src/: lib.rs
crates/coup-protocol/tests/: serde.rs
crates/environment-engine/: Cargo.toml
crates/environment-engine/src/: async_env.rs  connect_four.rs  coup.rs  lib.rs  poker.rs  red_button.rs  registry.rs  tic_tac_toe.rs  vibe_check.rs  wordle.rs
crates/environment-engine/tests/: coup_tests.rs  tic_tac_toe_tests.rs  vibe_check_tests.rs  wordle_tests.rs
crates/eval-runtime/: Cargo.toml
crates/eval-runtime/src/: environment.rs  lib.rs
crates/eval-runtime/tests/: turn_info_tests.rs
crates/poker-protocol/: Cargo.toml
crates/poker-protocol/resources/: poker_rules.md
crates/poker-protocol/src/: card.rs  engine.rs  lib.rs
crates/poker-protocol/tests/: card_tests.rs  engine_tests.rs
crates/red-button-protocol/: Cargo.toml
crates/red-button-protocol/resources/: red_button_rules.md
crates/red-button-protocol/src/: engine.rs  lib.rs
crates/red-button-protocol/tests/: engine_tests.rs
crates/tic-tac-toe-protocol/: Cargo.toml
crates/tic-tac-toe-protocol/resources/: tic_tac_toe_rules.md
crates/tic-tac-toe-protocol/src/: engine.rs  lib.rs
crates/tic-tac-toe-protocol/tests/: engine_tests.rs
crates/unified-event-protocol/: Cargo.toml
crates/unified-event-protocol/src/: lib.rs
crates/vibe-check-engine/: Cargo.toml
crates/vibe-check-engine/resources/: spectrum_cards.json  vibe_check_rules.md
crates/vibe-check-engine/src/: lib.rs
crates/vibe-check-protocol/: Cargo.toml
crates/vibe-check-protocol/src/: lib.rs
crates/vibe-check-protocol/tests/: protocol_tests.rs
crates/wordle-protocol/: Cargo.toml
crates/wordle-protocol/resources/: PROVENANCE.md  wordle_rules.md
crates/wordle-protocol/src/: engine.rs  lib.rs  seed.rs  word_list.rs
crates/wordle-protocol/tests/: engine_tests.rs
docs/: PORTING_VIEWERS_FROM_R3F.md  connect-four.md  coup.md  poker.md  red-button.md  tic-tac-toe.md  vibe-check.md  wordle.md
scripts/: sync-from-internal.sh
services/environment-server/: Cargo.toml  Dockerfile
services/environment-server/examples/: minimal-client.rs
services/environment-server/src/: lib.rs  main.rs
services/environment-server/src/routes/: mod.rs
services/environment-server/static/: red_button_viewer.html
services/environment-server/static/viewer/: c4-render.js  c4-state.js  c4-styles.css  c4-viewer.js  connect-four.html  coup-anim.js  coup-characters.js  coup-render.js  coup-state.js  coup-styles.css  coup-viewer.js  coup.html  poker-render.js  poker-state.js  poker-styles.css  poker-viewer.js  poker.html  rb-anim.js  rb-render.js  rb-state.js  rb-styles.css  rb-viewer.js  red-button.html  shared  tic-tac-toe.html  ttt-render.js  ttt-state.js  ttt-styles.css  ttt-viewer.js  vibe-characters.js  vibe-check.html  vibe-render.js  vibe-state.js  vibe-styles.css  vibe-viewer.js  wordle-state.js  wordle-styles.css  wordle-viewer.js  wordle.html
services/environment-server/static/viewer/assets/cards/: .gitkeep
services/environment-server/static/viewer/assets/characters/: PROVENANCE.md  character_01.glb  character_02.glb  character_03.glb  character_04.glb  character_05.glb  character_06.glb
services/environment-server/static/viewer/assets/players/: .gitkeep
services/environment-server/static/viewer/shared/: replay-controller.js  replay-controls.css  shared-arena.js  shared-bubble-effects.js  shared-camera-controls.js  shared-chair.js  shared-colors.js  shared-materials.js  shared-postprocessing.js  shared-text-sprites.js  shared-theme.css
services/environment-server/tests/: api_tests.rs
