[package]
name = "connect-four-protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol types and game engine for the Connect Four environment"
authors = []
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
eval-runtime = { path = "../eval-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
