[package]
name = "coup-engine"
version = "0.1.0"
edition = "2021"
description = "Pure rules engine for the Coup game environment"
authors = []
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
coup-protocol = { path = "../coup-protocol" }
tracing = { workspace = true }
