[package]
name = "coup-protocol"
version = "0.3.8"
edition = "2021"
description = "Protocol types for the Coup game environment"
authors = []
license = "MIT"
publish = false

[dependencies]
eval-runtime = { path = "../eval-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
