[package]
name = "eval-runtime"
version = "0.1.0"
edition = "2021"
description = "Environment trait contracts and turn metadata for game environments"
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
