[package]
name = "red-button-protocol"
version = "0.3.2"
edition = "2021"
description = "Protocol types and game engine for the Red Button environment"
authors = []
license = "MIT"
publish = false

[dependencies]
eval-runtime = { path = "../eval-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
