[package]
name = "red-button-protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol types and game engine for the Red Button environment"
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
eval-runtime = { path = "../eval-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
