[package]
name = "tic-tac-toe-protocol"
version = "0.2.0"
edition = "2021"
description = "Protocol types and game engine for the Tic-Tac-Toe environment"
authors = []
license = "MIT"
publish = false

[dependencies]
eval-runtime = { path = "../eval-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
