[package]
name = "unified-event-protocol"
version = "0.1.0"
edition = "2021"
description = "Unified event envelope for cross-environment spectator streaming, replay, and eval analytics"
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
