[package]
name = "vibe-check-engine"
version = "0.2.3"
edition = "2021"
description = "Game engine for Vibe Check environment"
authors = []
license = "MIT"
publish = false

[dependencies]
vibe-check-protocol = { path = "../vibe-check-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
