[package]
name = "vibe-check-engine"
version = "0.1.0"
edition = "2021"
description = "Game engine for Vibe Check environment"
license = "MIT"
repository = "https://github.com/taso-ventures/clashai-environments"
publish = false

[dependencies]
vibe-check-protocol = { path = "../vibe-check-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
